@@ -49,13 +49,7 @@ import org.apache.commons.lang3.StringUtils;
 /**
  * @author Sergei Visotsky
  */
-public class UrlViewQueryParser {
-
-    private static final String DELIMITER = ":";
-    private static final char MULTI_VALUE_DELIMITER = ',';
-    private static final String OFFSET = "_offset";
-    private static final String LIMIT = "_limit";
-    private static final String SORT = "_sort";
+public class UrlViewQueryParser extends ViewQueryParser {
 
     private static final Map<FieldType, UrlParameterParser> PARAMETER_PARSER_MAP = ImmutableMap.<FieldType, UrlParameterParser>builder()
             .put(FieldType.STRING, new StringTypeParser())
@@ -66,6 +60,7 @@ public class UrlViewQueryParser {
             .put(FieldType.TIME, new TimeTypeParser())
             .build();
 
+    @Override
     public ViewQuery constructViewQuery(ViewMetadata metadata, Map<String, String[]> params) throws UrlParseException {
         return ViewQuery.builder()
                 .filter(parseFilter(metadata, params))
@@ -173,28 +168,6 @@ public class UrlViewQueryParser {
 
     private Filter createLikeFilter(ViewField field, String likeMask) {
         return new LikeFilter(field.getFieldType(), field.getName(), likeMask);
-    }
-
-    private Long parseOffset(Map<String, String[]> params) throws UrlParseException {
-        String[] strArray = params.get(OFFSET);
-        if (strArray == null) {
-            return null;
-        }
-        if (strArray.length > 1) {
-            throw new UrlParseException("Only one _offset parameter allowed");
-        }
-        return Long.parseLong(strArray[0]);
-    }
-
-    private Integer parseLimit(Map<String, String[]> params) throws UrlParseException {
-        String[] strArray = params.get(LIMIT);
-        if (strArray == null) {
-            return null;
-        }
-        if (strArray.length > 1) {
-            throw new UrlParseException("Only one _limit parameter allowed");
-        }
-        return Integer.parseInt(strArray[0]);
     }
 
     public List<Order> parseOrderList(ViewMetadata metadata, Map<String, String[]> params) throws UrlParseException {
