@@ -3,6 +3,7 @@
 == 1.4.0
 === Features
 * [#95] - Introduce executeQuery for a single element
+* [#98] - Adopt Query API for a GraphQL version
 
 == 1.3.0
 === Features
